--- a/frontend/html/ct-sp.html
+++ b/frontend/html/ct-sp.html
@@ -1,12 +1,12 @@
 <!DOCTYPE <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Atsumaru</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
         <link rel="stylesheet" href="../css/styles.css">
-        <link rel="stylesheet" href="../css/cart.css">
+        <link rel="stylesheet" href="../css/ct-sp.css">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css"/>
     </head>
     <body>
@@ -42,31 +42,56 @@
                     </div>
                 </div>
                 <div class="logo"><span style="color: blueviolet;">atsu</span><span style="color: #fff;">maru</span></div>
-                <div class="search"><input type="text" placeholder="Tìm kiếm"><button style="padding: 10px;"><i class="fa-solid fa-magnifying-glass"></button></i></div>
+                <div class="search"><input type="text" placeholder="Tìm kiếm"><button style="padding: 10px;" ><i class="fa-solid fa-magnifying-glass"></button></i></div>
                 <div class="h-right"><button><i class="fa-solid fa-cart-shopping"></i></button> <button><i class="fa-solid fa-user"></i></button>
                 </div>
             </div>
         </div>
-        <div class="wrap">
-            <div class="cat">
-                <h3>Giỏ Hàng của bạn </h3>
-                <span>Bạn có 0 sản phẩm</span>
-                <div class="sum">
-                    <div class="left">
-                        <p>Tổng Sản Phẩm</p>
-                        <p>Giảm Giá</p>
-                        <p>Thanh Toán</p>
+        <div class="body-header">
+            <span
+              ><a href="../index.html">Trang chủ</a> >
+              <a href="#" id="title"
+                >Pate Mèo Royal Canin Mother Babycat Cho Mèo Mẹ & Mèo Con (Lon
+                195g)</a
+              ></span
+            >
+          </div>
+          <div class="wrap">
+            <div class="box">
+                <div class="info-sp">
+                    <div class="sp">
+                        <img src="../img/sp/top10/berserk.jpg" alt="">
                     </div>
-                    <div class="right">
-                        <p>0đ</p>
-                        <p>-0đ</p>
-                        <p>0đ</p>
+                    <div class="info">
+                        <p class="sl">Số Lượng</p>
+                        <div class="mount">
+                            <i class="fa-solid fa-minus"></i>
+                            <input type="text" name="quantity" id="quantity" value="1" readonly />
+                            <i class="fa-solid fa-plus"></i>
+                        </div>
+                        <button>Thêm vào giỏ</button>
+                        <div><p>action • adventure • Dark fantasy • Manga • 18+ • seinen</p></div>
+                        <p>Berserk xoay quanh Guts, một chiến binh cô độc với thanh kiếm khổng lồ, 
+                            sống trong một thế giới đầy rẫy chiến tranh, quái vật và những kẻ phản bội. 
+                            Từ nhỏ, Guts đã phải chiến đấu để tồn tại, bị cuốn vào những trận chiến tàn 
+                            khốc và không ngừng tìm kiếm một mục tiêu thực sự cho đời mình. Trên hành trình đó, 
+                            anh gặp Griffith, một thủ lĩnh đầy tham vọng của đội lính đánh thuê Bando di Falco,
+                            người sau này đã có một bước ngoặt khủng khiếp biến anh thành một trong những nhân 
+                            vật phản diện đáng sợ nhất của manga.
+                        </p>
                     </div>
                 </div>
-                <button>Thanh toán</button>
+                <h4>Xem Trước:</h4>
+                <div class="watch-first">
+                    <div class="ig"><img src="/frontend/img/xem trc/11.png" alt=""></div>
+                    <div class="ig"><img src="/frontend/img/xem trc/1.jpg" alt=""></div>
+                    <div class="ig"><img src="/frontend/img/xem trc/2png.png" alt=""></div>
+                    <div class="ig"><img src="/frontend/img/xem trc/3.png" alt=""></div>
+                    <div class="ig"> <img src="/frontend/img/xem trc/4.png" alt=""></div>
+                </div>
             </div>
-        </div>
-        <footer>
+          </div>
+          <footer>
             <hr />
             <div class="footer-section1">
               <div class="section1-block1">
@@ -92,7 +117,7 @@
                 <p>
                     Atsumaru – Nền tảng truyện tranh & thương mại điện tử dành cho fan manga. Đọc truyện, mua sắm, kết nối đam mê!
                 </p>
-                <img src="../img/xac-nhan-bct.png" alt="Xác nhận bộ công thương" />
+                <img src="/frontend/img/xac-nhan-bct.png" alt="Xác nhận bộ công thương" />
               </div>
               <div class="policy">
                 <h2>CHÍNH SÁCH</h2>
@@ -119,6 +144,6 @@
               </div>
             </div>
         </footer>
-        <script src="/frontend/js/cart.js"></script>
+        <script src="/frontend/js/ct-sp.js"></script>
     </body>
 </html>
